# fplay

./: README.md  pyproject.toml
src/fplay/: main.py
