[project]
name = "fplay"
version = "v1"
description = "Movie viewing manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "typer>=0.24.1",
    "yt-dlp>=2026.3.17",
]

[tool.uv]
package = true

[project.scripts]
fplay = "fplay.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fplay"]
